@@ -7,7 +7,7 @@ use CSS::Sass;
 
 ################################################################################
 package CSS::Sass::Watchdog;
-our $VERSION = "v3.2.0";
+our $VERSION = "v3.2.1";
 ################################################################################
 
 use Exporter 'import'; # gives you Exporter's import() method directly
@@ -352,7 +352,7 @@ L<CSS::Sass>
 
 =head1 AUTHOR
 
-David Caldwell E<lt>david@porkrind.orgE<gt>
+David Caldwell E<lt>david@porkrind.orgE<gt>  
 Marcel Greter E<lt>perl-libsass@ocbnet.chE<gt>
 
 =head1 LICENSE
